feat: implement first pass at InvocationHandler experiment.
Additionally and more critically, got nullness checker passing on tests; this was achieved by introducing stubs. Also resolve nullness checker issues as a result of not providing --add-opens.. to compiler args.