@@ -37,7 +37,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.0.0</version>
+            <version>3.27.6</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -67,10 +67,13 @@
                     <annotationProcessors>
                         <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
                     </annotationProcessors> 
-                    <compilerArgs>
+                    <compilerArgs combine.children="append">
                         <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                         <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                         <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                        <!-- this was really painful to figure out; you get an error like this: [ERROR] Compiler 'Resolve' class doesn't contain required 'find*' method !-->
+                        <!-- if you don't have this ; have to add -X to get maven stacktrace and look carefully that these lines are add-exports not add-opens -->
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg> 
                         <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                         <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                         <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
@@ -78,22 +81,10 @@
                         <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                         <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                         <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                        <!-- <arg>-Astubs=checker/stubs/Assertions.astub</arg> -->
+                        <arg>-Astubs=checker/stubs/</arg>
                     </compilerArgs>
                 </configuration>
-                <executions>
-                    <!-- TODO: enable checker for test code at some point.. -->
-                    <execution>
-                        <id>default-testCompile</id>
-                        <phase>test-compile</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                        <configuration>
-                            <proc>none</proc> <!-- This skips annotation processing -->
-                        </configuration>
-                    </execution>
-                </executions>
+
 
             </plugin>
         </plugins>
